# HabitGuardian

./: .replit  README.md  app.py  models.py  pyproject.toml  routes.py
attached_assets/: Pasted-Agent-instructions-Use-the-following-feedback-to-refine-and-make-changes-to-the-app-Ensure-that-an-1735654690211.txt  Pasted-I-ll-help-you-create-a-FastAPI-application-for-a-habit-building-platform-with-financial-incentives--1735581735920.txt
blueprints/: google_auth.py
services/: plaid_service.py
static/js/: charts.js  main.js
templates/: achievements.html  api_docs.html  base.html  create_habit.html  dashboard.html  index.html  leaderboard.html  link_account.html  login.html  register.html
